# CppHgCdTe

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ext_deps/: derivate.hpp  integrate.hpp  matrix.hpp  optimize copy 3.hpp  optimize copy.hpp  optimize.hpp  spline.hpp  spline2d.hpp  vector.hpp
headers/: constants.hpp  endpoint.hpp  hamiltonian copy.hpp  hamiltonian.hpp  hamiltonian_arr.hpp  hamiltonian_old.hpp  heterostruct.hpp  model.hpp  operators.hpp  optimize.hpp  prev_hamiltonian.hpp  rotations.hpp  service.hpp  strain.hpp  strain_hamiltonian.hpp  strain_model.hpp
interop/: CMakeLists.txt  hgcdte.cpp  hgcdte.h
interop/bindings/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  _hgcdte.py  h0.hdf5  hgcdte.py  hgcdte_core.py  hgcdte_julia.jl  hgcdte_py.py  hkappa0.hdf5  hkl.py  libinterop.dylib  one_well.ipynb  one_well_new.ipynb  one_well_no_strain_2d.ipynb  one_well_no_strain_rot.ipynb  one_well_no_strain_rot_new.ipynb  one_well_strain.ipynb  one_well_strain_huge.ipynb  one_well_strain_new.ipynb  prototype.ipynb  prototype_py.ipynb  solid_strain.ipynb  test-rot2.ipynb  test.ipynb  test.txt  tunnel.ipynb  tunnel2.ipynb  wide.ipynb
interop/bindings/.ipynb_checkpoints/: experimental-checkpoint.ipynb
interop/examples/: Untitled2.ipynb  depth.ipynb  experimental_py.ipynb  hgcdte_py.py  hkl.py  libinterop.dylib  one_well_2d.ipynb  one_well_2d_crest.ipynb  one_well_no_strain_rot_new.ipynb  one_well_strain.ipynb  test-rot.ipynb  test-rot2.ipynb  test.ipynb
interop/examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  one_well-checkpoint.ipynb  one_well_new-checkpoint.ipynb  one_well_no_strain_rot-checkpoint.ipynb  one_well_no_strain_rot_new-checkpoint.ipynb  one_well_strain-checkpoint.ipynb  one_well_strain_huge-checkpoint.ipynb  one_well_strain_new-checkpoint.ipynb  solid_strain-checkpoint.ipynb  test-checkpoint.ipynb  test-rot2-checkpoint.ipynb  wide-checkpoint.ipynb
test/: CMakeLists.txt  derive.cpp  gmat.cpp  hamiltonian.cpp  integration.cpp  integration_manual.cpp  matrix.cpp  matrix_manual.cpp  model.cpp  operators.cpp  optimize.cpp  pstl_test.cpp  rotations.cpp  splines.cpp  strain_hamiltonian.cpp  strain_model.cpp  vector.cpp
